# multi-agent-meeting-assistant

./: README.md  pyproject.toml  quick_start.md  requirements.txt  test_file.txt
app/: main.py
app/agents/calendar/: agent.py  tools.py
app/agents/data/: agent.py  tools.py
app/agents/email/: agent.py  tools.py
app/core/: config.py  llm_factory.py
app/supervisor/: supervisor_agent.py
data/: contacts.csv  email_send_sample.json  emails_sent.json  meeting_status_sample.json  meetings_status.json
ui/: app.py
ui/components/: chat_ui.py  email_replies_ui.py  hitl_panel.py  logs_ui.py  meeting_form.py  settings_ui.py  sidebar.py  status_dashboard.py
ui/services/: agent_runner.py  email_service.py  meeting_tracker.py
ui/utils/: session_state.py
